@@ -62,8 +62,6 @@ AC_ARG_ENABLE(jack,[  --disable-jack          disable JACK sound support],
 		      [JACK_DISABLED=yes],[])
 AC_ARG_ENABLE(mme,[  --disable-mme           disable MME sound support],
 		      [MME_DISABLED=yes],[])
-AC_ARG_ENABLE(portaudio,[  --disable-portaudio     disable PortAudio sound support],
-		      [PORTAUDIO_DISABLED=yes],[])
 AC_ARG_ENABLE(docbook,[  --disable-docbook       disable building of DocBook documentation],[DOCBOOK_DISABLED=yes],[])
 
 #
@@ -145,17 +143,6 @@ if test $MME_FOUND ; then
   fi
 else
   AC_SUBST(MME_LIBS,"")
-fi
-
-#
-# Check for PortAudio
-#
-PKG_CHECK_MODULES(PORTAUDIO,portaudio-2.0,[PORTAUDIO_FOUND=y],[PORTAUDIO_NOT_FOUND=y])
-if test $PORTAUDIO_FOUND ; then
-  if test -z $PORTAUDIO_DISABLED ; then
-    AC_DEFINE(PORTAUDIO,yes)
-    USING_PORTAUDIO=yes
-  fi
 fi
 
 #
@@ -366,11 +353,6 @@ if test -z $USING_JACK ; then
 AC_MSG_NOTICE("|          Jack Audio Connection Kit (JACK) ... No    |")
 else
 AC_MSG_NOTICE("|          Jack Audio Connection Kit (JACK) ... Yes   |")
-fi
-if test -z $USING_PORTAUDIO ; then
-AC_MSG_NOTICE("|                     PortAudio (PORTAUDIO) ... No    |")
-else
-AC_MSG_NOTICE("|                     PortAudio (PORTAUDIO) ... Yes   |")
 fi
 if test -z $USING_MME ; then
 AC_MSG_NOTICE("|       Windows Multimedia Extensions (MME) ... No    |")
