@@ -22,7 +22,6 @@
 #include "dev_file.h"
 #include "dev_jack.h"
 #include "dev_mme.h"
-#include "dev_portaudio.h"
 #include "dev_stdout.h"
 
 #include "audiodevicefactory.h"
@@ -59,12 +58,6 @@ AudioDevice *AudioDeviceFactory(AudioDevice::Type type,Codec *codec,QObject *par
 #ifdef MME
     audiodevice=new DevMme(codec,parent);
 #endif  // MME
-    break;
-
-  case AudioDevice::PortAudio:
-#ifdef PORTAUDIO
-    audiodevice=new DevPortAudio(codec,parent);
-#endif  // PORTAUDIO
     break;
 
   case AudioDevice::LastType:
